--- a/.github/workflows/build-docker-server.yaml
+++ b/.github/workflows/build-docker-server.yaml
@@ -30,7 +30,7 @@ env:
   PUSH_IMAGE: ${{ github.event_name == 'pull_request' || github.event_name == 'push' || github.event_name == 'push tag' }}
 
 jobs:
-  build-container-image:
+  build-ctr-img:
     permissions:
       contents: read
       actions: read
@@ -131,13 +131,13 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  merge-container-images:
+  merge-ctr-imgs:
     permissions:
       contents: read
       packages: write
     runs-on: ubuntu-latest
     needs:
-      - build-container-image
+      - build-ctr-img
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
