--- a/.github/workflows/build-frontend.yaml
+++ b/.github/workflows/build-frontend.yaml
@@ -16,11 +16,8 @@ on:
         required: false
 
 jobs:
-  build-frontend:
+  build:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./frontend
 
     steps:
       - uses: actions/checkout@v4
@@ -37,9 +34,11 @@ jobs:
           restore-keys: ${{ runner.os }}-node
 
       - name: Install build dependencies
+        working-directory: ./frontend
         run: npm install
 
       - name: Build
+        working-directory: ./frontend
         run: |
           export NODE_OPTIONS=--max_old_space_size=4096
           CI=false npm run build
@@ -48,4 +47,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: frontend
-          path: build
+          path: ./frontend/build
