--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,14 +58,15 @@ dependencies = [
     "python-socketio[asyncio]==5.11.4",
     "jupyterlab==4.2.5",
     "python-dateutil >= 2.8.1",
-    "zarr>=3.0.0",
+    "zarr>=3.0.0a0",
     "numcodecs>=0.13.1",
     "aiohttp>=3.9.4",
     "numba>=0.61.2",
     "arkitekt-next[all]==0.30.1",
     "koil>=2.0.5",
     "msgpack>=1.0.4",
-    "esptool"
+    "esptool", 
+    "omero-py"
 ]
 
 [project.optional-dependencies]
