--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,6 @@ dependencies = [
     "koil>=2.0.5",
     "msgpack>=1.0.4",
     "esptool", 
-    "omero-py"
 ]
 
 [project.optional-dependencies]
@@ -81,7 +80,7 @@ PyQt5 = [
     "lantzdev[qt] >= 0.5.2",
     "qtpy >= 1.9",
 ]
-Lepmont = [
+Lepmon = [
     "smbus2",
     "smbus",
     "RPi.GPIO",
@@ -97,6 +96,9 @@ imjoy = [
 ]
 dev = [
     "pytest",
+]
+omero = [
+    "omero-py >= 5.6.0",
 ]
 
 [project.urls]
